force-app/zurich-sdm-app/main/default/objects/SDMAccountTeamRole__mdt/SDMAccountTeamRole__mdt.object-meta.xml
<CustomObject>
    <description>SDM: Configuracion para la relacion de roles de Account Team Member y campos de mediador (account)</description>
    <label>SDMAccountTeamRole</label>
    <pluralLabel>SDMAccountTeamRoles</pluralLabel>
</CustomObject>