force-app/zurich-sdm-app/main/default/objects/SDMAccountTeamRole__mdt/fields/IntermediaryNameField__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryNameField__c</fullName>
    <description>SDM: the name of the field to update in the account sobject (intermediary)</description>
    <label>Intermediary Name Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>