force-app/zurich-sdm-app/main/default/objects/SDMAccountTeamRole__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>SDM: nombre del rol en los Account Team Member</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TerritoryManager</fullName>
                <default>true</default>
                <label>Director Territorial</label>
            </value>
            <value>
                <fullName>Manager</fullName>
                <label>Director Zona</label>
            </value>
            <value>
                <fullName>BusinessManager</fullName>
                <label>Responsable de Negocio</label>
            </value>
            <value>
                <fullName>LifeManager</fullName>
                <label>Director Vida</label>
            </value>
            <value>
                <fullName>EnterpriseManager</fullName>
                <label>Director Empresas</label>
            </value>
            <value>
                <fullName>Trainer</fullName>
                <label>Formador</label>
            </value>
            <value>
                <fullName>LifeConsultant</fullName>
                <label>Consultor Vida</label>
            </value>
            <value>
                <fullName>PYMEConsultant</fullName>
                <label>Consultor Empresas</label>
            </value>
            <value>
                <fullName>PYMEManager</fullName>
                <isActive>true</isActive>
                <label>PYMEManager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>